--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>可以成为我的恋人吗？</title>
+    <title>胡金铭可以成为我的女朋友吗？</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <img id="mainImage" src="images/heart.png" alt="爱心">
-        <h1 id="question">可以成为我的恋人吗？</h1>
+        <h1 id="question">想和你成为你的男朋友嘛？</h1>
         <div class="buttons">
             <button id="yes">可以</button>
             <button id="no">不要</button>
