--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <img id="mainImage" src="images/heart.png" alt="爱心">
-        <h1 id="question">想和你成为你的男朋友嘛？</h1>
+        <h1 id="question">想成为你的男朋友嘛？</h1>
         <div class="buttons">
             <button id="yes">可以</button>
             <button id="no">不要</button>
