--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <img id="mainImage" src="images/heart.png" alt="爱心">
+        <img id="mainImage" src="images/pingtu(1).png" alt="比心">
         <h1 id="question">想成为你的男朋友嘛？</h1>
         <div class="buttons">
             <button id="yes">可以</button>
